# Hackaton-StreamerContentAnalysisTool

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  cookies.txt  diagrams.eapx  diagrams.ldb  download-data.py  env.yml  extract_chat_metadata.py  mkdocs.yml  preprocess-videos.py  pyproject.toml  repomix-output.txt  test_output.json  videos-test.txt  videos.txt
docs/: index.md
source/: pyproject.toml
source/data_acquisition/: download-data.py  preprocess-videos.py
source/feature_extraction/audio/: compress.py  extract.py  pyproject.toml  stage1.txt
source/feature_extraction/broad_context/: export.py  pyproject.toml
source/feature_extraction/image/: extract.py  pyproject.toml
source/feature_extraction/image_object/: extract.py
source/feature_extraction/image_prompt/: extract.py  pyproject.toml
source/feature_extraction/image_prompt2/: pyproject.toml  random2.py  rewrite.py
source/feature_extraction/speech_to_emotion/: emotion_log.txt  extract.py  pyproject.toml  test.py
source/feature_extraction/speech_to_text/: processed_sentences.txt  prototype.ipynb  pyproject.toml  speech_to_text_log.txt  speech_to_text_log_accel.txt  test.py  to_sentences.py
source/feature_extraction/text_to_sentiment/: pyproject.toml  test.py  transcript_with_sentiment.txt
source/feature_extraction/video_emotion/: pyproject.toml
source/frontend/: first_video_data.py  frontend.py  top_features.csv
source/label_extraction/: extract_chat_metadata.py  extract_rates.py  jason.py
source/training/: ferrrari.py  merge_video_and_labels.py  preprocess.py  train_rules.py
