[tool.poetry]
name = "byborgai"
version = "0.1.0"
description = ""
authors = ["Andris Gyori <gyori.andris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
mkdocs = "^1.6.1"
mkdocstrings = "^0.28.2"
mkdocs-api-autonav = "^0.2.1"
mkdocs-material = "^9.6.7"
mkdocs-click = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
