[tool.poetry]
name = "speech-to-emotion"
version = "0.1.0"
description = ""
authors = ["gyori-andris <gyori.andris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
transformers = "^4.49.0"
torch = "^2.6.0"
pydub = "^0.25.1"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
